--- a/desafio_imc/pubspec.yaml
+++ b/desafio_imc/pubspec.yaml
@@ -23,13 +23,10 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-  # assets:
-  #   - images/
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Modak
+      fonts:
+      - asset: assets/fonts/modak.ttf
