--- a/2_modulo/trilhaapp_versao_3/pubspec.yaml
+++ b/2_modulo/trilhaapp_versao_3/pubspec.yaml
@@ -17,12 +17,14 @@ dependencies:
   shared_preferences: ^2.2.1
   hive: ^2.2.3
   path_provider: ^2.1.1
+  hive_generator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
 
 flutter:
 
