--- a/2_modulo/trilhaapp_versao_4/pubspec.yaml
+++ b/2_modulo/trilhaapp_versao_4/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   hive: ^2.2.3
   path_provider: ^2.1.1
   hive_generator: ^2.0.1
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
