--- a/desafio_imc/pubspec.yaml
+++ b/desafio_imc/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   google_fonts: ^5.1.0
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
