--- a/3_modulo/trilhaapp_versao_7/pubspec.yaml
+++ b/3_modulo/trilhaapp_versao_7/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   path_provider: ^2.1.1
   hive_generator: ^2.0.1
   sqflite: ^2.3.0
+  dio: ^5.3.2
 
 dev_dependencies:
   flutter_test:
