--- a/3_modulo/trilhaapp_versao_8/pubspec.yaml
+++ b/3_modulo/trilhaapp_versao_8/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   hive_generator: ^2.0.1
   sqflite: ^2.3.0
   dio: ^5.3.2
+  crypto: ^3.0.3
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -33,3 +35,4 @@ flutter:
   uses-material-design: true
   assets:
     - lib/images/
+    - .env
