--- a/4_modulo/trilhaapp_versao_9/pubspec.yaml
+++ b/4_modulo/trilhaapp_versao_9/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   flutter_launcher_icons: ^0.13.1
   font_awesome_flutter: ^10.5.0
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
