--- a/4_modulo/trilhaapp_versao_9/pubspec.yaml
+++ b/4_modulo/trilhaapp_versao_9/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   font_awesome_flutter: ^10.5.0
   percent_indicator: ^4.2.3
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
