--- a/4_modulo/trilhaapp_versao_9/pubspec.yaml
+++ b/4_modulo/trilhaapp_versao_9/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   percent_indicator: ^4.2.3
   auto_size_text: ^3.0.0
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
