--- a/4_modulo/trilhaapp_versao_9/pubspec.yaml
+++ b/4_modulo/trilhaapp_versao_9/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   auto_size_text: ^3.0.0
   animated_text_kit: ^4.2.2
   convex_bottom_bar: ^3.2.0
+  brasil_fields: ^1.14.0
 
 dev_dependencies:
   flutter_test:
