--- a/4_modulo/trilhaapp_versao_9/pubspec.yaml
+++ b/4_modulo/trilhaapp_versao_9/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   brasil_fields: ^1.14.0
   intl: ^0.18.1
+  battery_plus: ^4.0.2
 
 dev_dependencies:
   flutter_test:
