--- a/4_modulo/trilhaapp_versao_9/pubspec.yaml
+++ b/4_modulo/trilhaapp_versao_9/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   intl: ^0.18.1
   battery_plus: ^4.0.2
   url_launcher: ^6.1.14
+  share_plus: ^7.1.0
 
 dev_dependencies:
   flutter_test:
