--- a/4_modulo/trilhaapp_versao_9/pubspec.yaml
+++ b/4_modulo/trilhaapp_versao_9/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   battery_plus: ^4.0.2
   url_launcher: ^6.1.14
   share_plus: ^7.1.0
+  package_info_plus: ^4.1.0
 
 dev_dependencies:
   flutter_test:
