--- a/4_modulo/trilhaapp_versao_9/pubspec.yaml
+++ b/4_modulo/trilhaapp_versao_9/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   url_launcher: ^6.1.14
   share_plus: ^7.1.0
   package_info_plus: ^4.1.0
+  device_info_plus: ^9.0.3
 
 dev_dependencies:
   flutter_test:
