--- a/4_modulo/trilhaapp_versao_9/pubspec.yaml
+++ b/4_modulo/trilhaapp_versao_9/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   share_plus: ^7.1.0
   package_info_plus: ^4.1.0
   device_info_plus: ^9.0.3
+  connectivity_plus: ^4.0.2
 
 dev_dependencies:
   flutter_test:
