feat: obtendo informações do GPS

--- a/4_modulo/trilhaapp_versao_9/pubspec.yaml
+++ b/4_modulo/trilhaapp_versao_9/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   package_info_plus: ^4.1.0
   device_info_plus: ^9.0.3
   connectivity_plus: ^4.0.2
+  geolocator: ^10.1.0
 
 dev_dependencies:
   flutter_test:
