--- a/4_modulo/trilhaapp_versao_9/pubspec.yaml
+++ b/4_modulo/trilhaapp_versao_9/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   device_info_plus: ^9.0.3
   connectivity_plus: ^4.0.2
   geolocator: ^10.1.0
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
