feat: usando a camera e a galeria

--- a/4_modulo/trilhaapp_versao_9/ios/Runner/Info.plist
+++ b/4_modulo/trilhaapp_versao_9/ios/Runner/Info.plist
@@ -54,6 +54,10 @@
 	<key>io.flutter.embedded_views_preview</key>
     <true/>
     <key>NSCameraUsageDescription</key>
-    <string>This app needs camera access to scan QR codes</string>
+    <string>This app needs camera access</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app needs library access</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app needs microfone</string>
 </dict>
 </plist>
