--- a/4_modulo/trilhaapp_versao_9/pubspec.yaml
+++ b/4_modulo/trilhaapp_versao_9/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   image_picker: ^1.0.4
   gallery_saver: ^2.3.2
+  image_cropper: ^4.0.1
 
 dev_dependencies:
   flutter_test:
