--- a/5_Lab_Projects/lista_de_contatos/pubspec.yaml
+++ b/5_Lab_Projects/lista_de_contatos/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_modular: ^6.3.2
+  parse_server_sdk_flutter: ^6.0.0
 
 dev_dependencies:
   flutter_test:
